# cotp-gui-rs

./: .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml
src/: app.rs  main.rs  tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src/pages/: welcome.rs
src/screens/: db.rs  home.rs  mod.rs
style/: main.scss  screen.scss
